--- a/index.css
+++ b/index.css
@@ -18,13 +18,22 @@ header{
 	color: white;
 	margin: 0px;
 	background: linear-gradient(to bottom, #999999 29%, #e6e5e3 87%);
+	font-family: 'Sansita Swashed', cursive;
+	text-shadow: 2px 2px 30px rgba(44,214,249,1);
 }
 .header_index{
 	background: rgb(230,229,227);
 	background: linear-gradient(0deg, rgba(230,229,227,1) 30%, rgba(44,214,249,1) 89%);
 	width: 100%;
 	height: 200px;
-	font-size: 20px;
+	font-size: 60px;
+	text-align: center;
+	text-shadow: 3px 2px 4px grey;
+	padding-top: 20px;
+	font-family: 'Sansita Swashed', cursive;
+}
+p.url:hover{
+	text-shadow: 2px 2px 4px grey;
 }
 th{
 	font-size: 25px;
