--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ header{
 	margin: 0px;
 	background: linear-gradient(to bottom, #999999 29%, #e6e5e3 87%);
 	font-family: 'Sansita Swashed', cursive;
-	text-shadow: 2px 2px 30px rgba(44,214,249,1);
+	text-shadow: 5px 5px 20px rgba(44,214,249,1), 5px -5px 20px rgba(44,214,249,1), -5px -5px 20px rgba(44,214,249,1), -5px 5px 20px rgba(44,214,249,1), -2px 0 white, 2px 0 white, 0 2px white, 0 -2px white;
 }
 .header_index{
 	background: rgb(230,229,227);
@@ -28,9 +28,10 @@ header{
 	height: 200px;
 	font-size: 60px;
 	text-align: center;
-	text-shadow: 3px 2px 4px grey;
+/*	text-shadow: 3px 2px 4px grey;*/
 	padding-top: 20px;
 	font-family: 'Sansita Swashed', cursive;
+	text-shadow: -1px 0 white, 1px 0 white, 0 1px white, 0 -1px white;
 }
 p.url:hover{
 	text-shadow: 2px 2px 4px grey;
@@ -46,10 +47,11 @@ th{
 	padding: 1px;
 }
 .dt_in_rezume{
-	background-color: #7d7d7d;
-	color: white;
+	background-color: #ddd;
+	color: black;
 	font-size: 23px;
 	padding: 1px;
+	font-weight: bolder;
 }
 /*НЕ РАБОТАЕТ*/
 .left_index_fon{
@@ -64,13 +66,24 @@ th{
 .p_to_index{
 	padding: 1%;
 	text-align: center;
-	font-size: 50px;
+	font-size: 50px;	
+}
+.name_row{
+	font-family: 'Contrail One', cursive;
+	text-shadow: -1px 0 1px blue, 0 1px 1px blue, 1px 0 1px blue, 0 -1px 1px blue;
+	font-size: 30px;
 }
 .list_num_rez{
 	margin-left: 40px; 
 }
 .podorozi{
 	color: darkblue;
+	font-weight: bolder;
+	font-size: 20px;
+}
+a.podorozi:hover{
+	text-shadow: 1px 1px 3px white;
+	font-style: italic;
 }
 .full{
 	width: 70%;
@@ -83,6 +96,56 @@ th{
 .eighty{
 	margin: auto;
 	width: 80%;
+	box-shadow: 5px -5px 15px grey, 10px -10px 10px grey, -10px -10px 10px grey, 5px -5px 15px grey;
+}
+.new_row_programmer{
+	font-size: 20px;
+}
+.new_row_programmer_left{
+	font-size: 20px;
+	text-align: left;
+}
+.nav_programmer{
+	width: 100%;
+	background-color: white;
+	margin: 20px;
+	padding: 1px;
+	padding: 5px 20px 10px 20px;
+}
+.nav_tr_programmer{
+	margin: 0px;
+	display: table-row;
+    vertical-align: inherit;
+    border-bottom: 2px solid black;
+}
+.tr_programmer2{
+	background-color: #f9f9f9;
+	margin: 0px;
+}
+.tr_programmer:hover{
+	background-color: #ddd;
+	font-weight: bolder;
+}
+.tr_programmer2:hover{
+	background-color: #ddd;
+	font-weight: bolder;
+}
+.tr_programmer{
+	margin: 0px;
+	display: table-row;
+    vertical-align: inherit;
+    border-bottom: 2px solid black;
+}
+.td_programmer{
+	font-size: 17px;
+	padding: 5px;
+	border-bottom: 1px solid #ddd;
+}
+.td_programmerc{
+	font-size: 17px;
+	padding: 5px;
+	text-align: center;
+	border-bottom: 1px solid #ddd;
 }
 .moreplavci{
 	border-collapse: collapse;
@@ -109,6 +172,8 @@ th{
 .caption{
 	font-size: 40px;
 	text-align: center;
+	font-family: 'Tillana', cursive;
+	text-shadow: -1px 0 white, 1px 0 white, 0 1px white, 0 -1px white;
 }
 .com{
 	width: 50px;
