--- a/style.css
+++ b/style.css
@@ -92,18 +92,19 @@ a.button_child_firstname:hover {
 	height: 2px;
 	background-color: blue;
 }
-.block_nav{
-	/*Блок с навигацией по сайту*/
+/*.block_nav{
+	Блок с навигацией по сайту 
 	width: 100%;
 	margin-top: 1px;
-	height: 90px;
+	height: 50px;
 	position: sticky;
 	background-color: white;
 }
 .a_nav {
-	
 	margin: auto;
+	margin: 7px 0 0 0; НЕ ИСПОЛЬЗУЕТСЯ
 	font-size: 30px;
+	width: 200px;
 	display: inline;
 	float: left;
 	color: black;
@@ -112,9 +113,66 @@ a.button_child_firstname:hover {
 .list_nav{
 	word-spacing: 2px;
 	margin: auto;
+	align-items: center;
+	line-height: 50px;
+	display: flex;
+	justify-content: space-around;
 }
-
-
+НАЧИНАЯ ЭТОЙ СТРОКОЙ (line 121) И ЗАКАНЧИВАЯ line 174 ВЗЯТОЕ МЕНЮ.
+СВОЕ МЕНЮ 95-120 СТРОКИ*/
+.menu-main {
+  list-style: none;
+  height: 45px;
+  margin: 0px 0 0px;
+  padding: 25px 0 5px;
+  text-align: center;
+  background: white;
+}
+.menu-main li {display: inline-block;}
+.menu-main li:after {
+  content: "|";
+  color: #606060;
+  display: inline-block;
+  vertical-align:top;
+}
+.menu-main li:last-child:after {content: none;}
+.menu-main a {
+  text-decoration: none;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  letter-spacing: 2px;
+  position: relative;
+  padding-bottom: 20px;
+  margin: 0 34px 0 30px;
+  font-size: 17px;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: color .2s;
+}
+.menu-main a, .menu-main a:visited {color: #9d999d;}
+.menu-main a.current, .menu-main a:hover{color: #feb386;}
+.menu-main a:before,
+.menu-main a:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  top: auto;
+  right: 50%;
+  bottom: -5px;
+  left: 50%;
+  background: #feb386;
+  transition: .8s;
+}
+.menu-main a:hover:before, .menu-main .current:before {left: 0;}
+.menu-main a:hover:after, .menu-main .current:after {right: 0;}   
+@media (max-width: 550px) {
+.menu-main {padding-top: 0;}
+.menu-main li {display: block;}
+.menu-main li:after {content: none;}
+.menu-main a {
+  padding: 25px 0 20px; 
+  margin: 0 30px;
+}
+}
 
 
 
