--- a/style_one.css
+++ b/style_one.css
@@ -1,28 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Numans&family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Condensed');
+@import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');
+@font-face{font-family:IcoFont;font-weight:400;font-style:Regular;src:url(fonts/icofont.woff2) format("woff2"),url(fonts/icofont.woff) format("woff")}[class*=" icofont-"],[class^=icofont-]{font-family:IcoFont!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;white-space:nowrap;word-wrap:normal;direction:ltr;line-height:1;-webkit-font-feature-settings:"liga";-webkit-font-smoothing:antialiased}.icofont-facebook:before{content:"\ed37"}.icofont-instagram:before{content:"\ed46"}.icofont-xs{font-size:.5em}.icofont-sm{font-size:.75em}.icofont-md{font-size:1.25em}.icofont-lg{font-size:1.5em}.icofont-1x{font-size:1em}.icofont-2x{font-size:2em}.icofont-3x{font-size:3em}.icofont-4x{font-size:4em}.icofont-5x{font-size:5em}.icofont-6x{font-size:6em}.icofont-7x{font-size:7em}.icofont-8x{font-size:8em}.icofont-9x{font-size:9em}.icofont-10x{font-size:10em}.icofont-fw{text-align:center;width:1.25em}.icofont-ul{list-style-type:none;padding-left:0;margin-left:0}.icofont-ul>li{position:relative;line-height:2em}.icofont-ul>li .icofont{display:inline-block;vertical-align:middle}.icofont-border{border:solid .08em #f1f1f1;border-radius:.1em;padding:.2em .25em .15em}.icofont-pull-left{float:left}.icofont-pull-right{float:right}.icofont.icofont-pull-left{margin-right:.3em}.icofont.icofont-pull-right{margin-left:.3em}.icofont-spin{-webkit-animation:icofont-spin 2s infinite linear;animation:icofont-spin 2s infinite linear;display:inline-block}.icofont-pulse{-webkit-animation:icofont-spin 1s infinite steps(8);animation:icofont-spin 1s infinite steps(8);display:inline-block}@-webkit-keyframes icofont-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes icofont-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.icofont-rotate-90{-webkit-transform:rotate(90deg);transform:rotate(90deg)}.icofont-rotate-180{-webkit-transform:rotate(180deg);transform:rotate(180deg)}.icofont-rotate-270{-webkit-transform:rotate(270deg);transform:rotate(270deg)}.icofont-flip-horizontal{-webkit-transform:scale(-1,1);transform:scale(-1,1)}.icofont-flip-vertical{-webkit-transform:scale(1,-1);transform:scale(1,-1)}.icofont-flip-horizontal.icofont-flip-vertical{-webkit-transform:scale(-1,-1);transform:scale(-1,-1)}:root .icofont-flip-horizontal,:root .icofont-flip-vertical,:root .icofont-rotate-180,:root .icofont-rotate-270,:root .icofont-rotate-90{-webkit-filter:none;filter:none;display:inline-block}.icofont-inverse{color:#fff}.sr-only{border:0;clip:rect(0,0,0,0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.sr-only-focusable:active,.sr-only-focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}
+
 *{
 	margin: 0px;
 	padding: 0px;
 	text-decoration: none;
 	list-style: none;
+	box-sizing: border-box;
+}
+a{
+	color: white;
 }
 body{
-	background-color: darkgrey;
+	background-color: #ebebeb;
 }
 .header{
-/*	margin: auto;*/
-/*	margin-top: 50px;*/
-/*	width: 88%;*/
-	height: 800px;
-	background-color: white;
+	height: 900px;
+	background-image: url(img/fon1.jpg);
+	background-size: cover;
 }
 .full {
-	width: 88%;
+/*	width: 88%;*/
 	margin: auto;
-	height: 1500px;
-}
-.header_sticky{
-	width: 100%;
-	height: 100px;
-	/*position: fixed;*/
+	/*height: 2000px;*/
 }
 .hr{
 	height: 2px;
@@ -39,65 +41,39 @@ body{
 	display: block;	
 }
 .politest {
-	margin: 14px 0 20px 10px;
+	margin: 21px 0 20px 10px;
 	display: flex; 
-	font-size: 50px;
+	font-size: 40px;
 	float: left;
-	color: black;
+	color: white;
+	font-family: 'Numans', sans-serif;
+	letter-spacing: 1px;
+ 	background: linear-gradient(45deg, #0B2349 33%, #0D61BC 66%, #8AA9D6);
+  	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
 }
-.div_block_button{
-	//пусто;
-}
-.block_button{
-	background-color: transparent;
-	border: 1px solid black;
-	padding: 5px 12px 5px 10px;
-	width: 70px;
-	height: 20px;
-	border-radius: 100px;
-	float: left;
-	margin-top: 27px;
-	margin-left: 20px;
-}
-.button_button:hover {
-	border: 1px solid green;
-	padding: 5px 12px 5px 10px;
-	border-radius: 100px;
-	margin-left: -10px;
-}
-.block_button:first-child{
-	margin-left: 650px;
-	padding: 5px 0 5px 10px;
-}
-.button_on_exit{
-	text-align: center;
-	font-size: 18px;
-	color: black;
-} 
-
-/*ВЫБОР МЕЖДУ ДВУМЯ ВИДАМИ КНОПОК*/
-/*ВЫБОР МЕЖДУ ДВУМЯ ВИДАМИ КНОПОК*/
-/*ВЫБОР МЕЖДУ ДВУМЯ ВИДАМИ КНОПОК*/
 
 .menu-main {
 /*  height: 70px;*/
 /*  margin: 0px 0 0px;*/
   padding: 35px 0 0px;
   text-align: center;
-  background: white;
 }
 .menu-main li {
 	display: inline-block;
 }
-/*.menu-main li:after {
+.menu-main li:after {
   content: "";
   color: rgb(26, 80, 135);
   display: inline-block;
   vertical-align:top;
-}*/
-/*.menu-main li:last-child:after {
-	content: none; НАДО ПОНЯТЬ ЗНАЧЕНИЕ СТРОКИ 
-}*/
+}
+.menu-main li:last-child:after {
+	content: none; /*НАДО ПОНЯТЬ ЗНАЧЕНИЕ СТРОКИ*/ 
+}
+
+/*НАДО УБРАТЬ БАГ С ТОЧКОЙ ПОСЛЕ НАВЕДЕНИЯ НА УЧИТЕЛЬ/УЧЕНИК*/
+
 .menu-main a {
   font-family: 'Ubuntu Condensed', sans-serif;
   letter-spacing: 2px;
@@ -110,7 +86,7 @@ body{
   transition: color .2s;
 }
 .menu-main a, .menu-main a:visited {color: #9d999d;}
-.menu-main a:hover{color: rgb(26, 80, 135);}
+.menu-main a:hover{color: white;}
 .menu-main a:before, .menu-main a:after {
   content: "";
   position: absolute;
@@ -125,17 +101,6 @@ body{
 .menu-main a:hover:before {left: 0;}
 .menu-main a:hover:after {right: 0;} 
 
-/*@media (max-width: 550px) {
-.menu-main {padding-top: 0;}
-.menu-main li {display: block;}
-.menu-main li:after {content: none;}
-.menu-main a {
-  padding: 25px 0 20px; 
-  margin: 0 30px;
-}
-}*/
-
-
 
 .way_to_polit{
 	width: 25px;
@@ -144,30 +109,52 @@ body{
 	top: -32px;
 	left: -50px;
 	position: relative;
-}
-.emblema_way_to_polit{
-	width: 100%;
-	height: 100%;
+	color: white;"
+
 }
 .to_subject{
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: transparent;
-	border: 2px solid grey;
-	align-items: center;
-/*	padding-bottom: 10px;*/
-	margin: auto;
-	margin-top: 600px;
+	margin-top: 600px; /*ТРЕБУЕТСЯ ЗАМЕНА*/
+	width: 100%;
+	display: flex;
+	align-content: center;
+	align-items: flex-end;
+	justify-content: center;
 }
 .way_to_subject{
 	font-size: 25px; 
 	margin-top: 4px;
-	margin-left: -1px;
+	margin-left: 10px;
+	color: white;
+	background-color: transparent;
+	display: flex;
+	width: 40px;
+	height: 40px;
+	justify-content: center;
 	align-items: center;
-	text-align: center;
-	color: black;
+	align-self: center;
 }
 .way_to_subject:hover{
-	color: yellow;
+	border: 2px solid white;
+	border-radius: 50%;
+  	transition: .2s;
+}
+.nav{
+	width: 100%;
+	margin: auto;
+/*	display: flex;*/
+	background-color: white;
+}
+.block_subject{
+	width: 33%;
+	height: 380px;
+	display: flex;
+	float:  left;
+	font-family: 'Salsa', cursive;
+	justify-content: center;
+	align-items: center;
+	font-size: 50px;
+	background-color: white;
+}
+.block_subject:nth-child(even){
+	background-color:  #0B2349;
 }
