--- a/style_one.css
+++ b/style_one.css
@@ -3,6 +3,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Salsa&display=swap');
 @font-face{font-family:IcoFont;font-weight:400;font-style:Regular;src:url(fonts/icofont.woff2) format("woff2"),url(fonts/icofont.woff) format("woff")}[class*=" icofont-"],[class^=icofont-]{font-family:IcoFont!important;speak:none;font-style:normal;font-weight:400;font-variant:normal;text-transform:none;white-space:nowrap;word-wrap:normal;direction:ltr;line-height:1;-webkit-font-feature-settings:"liga";-webkit-font-smoothing:antialiased}.icofont-facebook:before{content:"\ed37"}.icofont-instagram:before{content:"\ed46"}.icofont-xs{font-size:.5em}.icofont-sm{font-size:.75em}.icofont-md{font-size:1.25em}.icofont-lg{font-size:1.5em}.icofont-1x{font-size:1em}.icofont-2x{font-size:2em}.icofont-3x{font-size:3em}.icofont-4x{font-size:4em}.icofont-5x{font-size:5em}.icofont-6x{font-size:6em}.icofont-7x{font-size:7em}.icofont-8x{font-size:8em}.icofont-9x{font-size:9em}.icofont-10x{font-size:10em}.icofont-fw{text-align:center;width:1.25em}.icofont-ul{list-style-type:none;padding-left:0;margin-left:0}.icofont-ul>li{position:relative;line-height:2em}.icofont-ul>li .icofont{display:inline-block;vertical-align:middle}.icofont-border{border:solid .08em #f1f1f1;border-radius:.1em;padding:.2em .25em .15em}.icofont-pull-left{float:left}.icofont-pull-right{float:right}.icofont.icofont-pull-left{margin-right:.3em}.icofont.icofont-pull-right{margin-left:.3em}.icofont-spin{-webkit-animation:icofont-spin 2s infinite linear;animation:icofont-spin 2s infinite linear;display:inline-block}.icofont-pulse{-webkit-animation:icofont-spin 1s infinite steps(8);animation:icofont-spin 1s infinite steps(8);display:inline-block}@-webkit-keyframes icofont-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes icofont-spin{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.icofont-rotate-90{-webkit-transform:rotate(90deg);transform:rotate(90deg)}.icofont-rotate-180{-webkit-transform:rotate(180deg);transform:rotate(180deg)}.icofont-rotate-270{-webkit-transform:rotate(270deg);transform:rotate(270deg)}.icofont-flip-horizontal{-webkit-transform:scale(-1,1);transform:scale(-1,1)}.icofont-flip-vertical{-webkit-transform:scale(1,-1);transform:scale(1,-1)}.icofont-flip-horizontal.icofont-flip-vertical{-webkit-transform:scale(-1,-1);transform:scale(-1,-1)}:root .icofont-flip-horizontal,:root .icofont-flip-vertical,:root .icofont-rotate-180,:root .icofont-rotate-270,:root .icofont-rotate-90{-webkit-filter:none;filter:none;display:inline-block}.icofont-inverse{color:#fff}.sr-only{border:0;clip:rect(0,0,0,0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.sr-only-focusable:active,.sr-only-focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}
 
+
+::-webkit-scrollbar-button {
+background-image:url('');
+background-repeat:no-repeat;
+width:10px;
+height:0px;
+}
+::-webkit-scrollbar-track {
+background-color: #261202;
+box-shadow:0px 0px 3px #000 inset;
+}
+::-webkit-scrollbar-thumb {
+/*-webkit-border-radius: 5px;*/
+/*border-radius: 5px;*/
+background-color:#5c2e0a;
+box-shadow:0px 1px 1px #261202 inset;
+background-image:url('https://yraaa.ru/_pu/24/59610063.png');
+background-position:center;
+background-repeat:no-repeat;
+}
+::-webkit-resizer{
+background-image:url('');
+background-repeat:no-repeat;
+width:7px;
+height:0px
+}
+::-webkit-scrollbar{
+width: 11px;
+}
+
+
+
+
 *{
 	margin: 0px;
 	padding: 0px;
@@ -10,21 +43,19 @@
 	list-style: none;
 	box-sizing: border-box;
 }
-a{
+/*a{
 	color: white;
-}
+}*/
 body{
 	background-color: #ebebeb;
 }
 .header{
-	height: 900px;
+	height: 100vh;
 	background-image: url(img/fon1.jpg);
 	background-size: cover;
 }
 .full {
-/*	width: 88%;*/
 	margin: auto;
-	/*height: 2000px;*/
 }
 .hr{
 	height: 2px;
@@ -48,14 +79,13 @@ body{
 	color: white;
 	font-family: 'Numans', sans-serif;
 	letter-spacing: 1px;
- 	background: linear-gradient(45deg, #0B2349 33%, #0D61BC 66%, #8AA9D6);
+	color: white;
+ 	/*background: linear-gradient(45deg, #0B2349 33%, #0D61BC 66%, #8AA9D6);
   	-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;
+  	-webkit-text-fill-color: transparent;*/
 }
 
 .menu-main {
-/*  height: 70px;*/
-/*  margin: 0px 0 0px;*/
   padding: 35px 0 0px;
   text-align: center;
 }
@@ -64,7 +94,7 @@ body{
 }
 .menu-main li:after {
   content: "";
-  color: rgb(26, 80, 135);
+  color: white;
   display: inline-block;
   vertical-align:top;
 }
@@ -85,7 +115,7 @@ body{
   display: inline-block;
   transition: color .2s;
 }
-.menu-main a, .menu-main a:visited {color: #9d999d;}
+.menu-main a, .menu-main a:visited {color: white;}
 .menu-main a:hover{color: white;}
 .menu-main a:before, .menu-main a:after {
   content: "";
@@ -95,11 +125,12 @@ body{
   right: 50%;
   left: 50%;
   bottom: -5px;
-  background: #feb386;
+  background: white;
   transition: .9s;
 }
 .menu-main a:hover:before {left: 0;}
 .menu-main a:hover:after {right: 0;} 
+
 
 
 .way_to_polit{
@@ -111,9 +142,11 @@ body{
 	position: relative;
 	color: white;"
 
+
+
 }
 .to_subject{
-	margin-top: 600px; /*ТРЕБУЕТСЯ ЗАМЕНА*/
+	margin-top: 80vh; /*ТРЕБУЕТСЯ ЗАМЕНА*/
 	width: 100%;
 	display: flex;
 	align-content: center;
@@ -138,23 +171,123 @@ body{
 	border-radius: 50%;
   	transition: .2s;
 }
-.nav{
+
+
+
+.menu{
 	width: 100%;
-	margin: auto;
-/*	display: flex;*/
+	text-align: center;
 	background-color: white;
+	display: block;
 }
-.block_subject{
-	width: 33%;
-	height: 380px;
+.menu_subject {
+	float: left;
+	width: 33.333333333%;
+	height: 50vh;
+}
+.way_to_menu{
+	color: white;
+	display: block;
+	background-color: #0B2349;
+	padding: 10px 0px;
+	font-size: 0px;
+	line-height: 50vh;
+	position: relative;
+}
+.way_to_menu::before{
+	content: attr(data-name);
+	position: absolute;
+	left: 0;
+	top: 0;
+	font-size: 30px;
+	padding: 10px 0px;
+	width: 100%;
+	line-height: 50vh;
+	transform: rotateX(90deg) translateY(50vh);
+	transform-origin: 50% 100%;
+	transition-duration: 700ms;
+	transition-property: transform;
+}
+.way_to_menu:hover::before {
+	transform: rotateX(0deg) translateY(0);
+}
+.way_to_menu::after{
+	content: attr(data-name);
+	position: absolute;
+	left: 0;
+	font-size: 30px;
+	top: 0;
+	padding: 10px 0px;
+	width: 100%;
+	line-height: 50vh;
+	background-color: #0B2349;
+	transform: rotateX(0deg) translateY(0);
+	transform-origin: 50% 0;
+	transition-duration: 700ms;
+	transition-property: transform;
+}
+.way_to_menu:hover::after {
+	transform: rotateX(90deg) translateY(-50vh);
+}
+.even::after{
+	background-color: white;
+	color: #0B2349;
+}
+.even{
+	background-color: white;
+	color: #0B2349;
+}
+#history::before{
+	background-image: url(img/fon_history2.jpg);
+	background-size: cover;
+}
+#programm::before{
+	background-image: url(img/fon_program.jpg);
+	background-size: cover;
+}
+#inform::before{
+	background-image: url(img/fon_informatika.jpg);
+	background-size: cover;
+}
+#physic::before{
+	background-image: url(img/fon_physic.jpg);
+	background-size: cover;
+}
+#chemist::before{
+	background-image: url(img/fon_chemist.jpg);
+	background-size: cover;
+}
+#biology::before{
+	background-image: url(img/fon_biology.jpg);
+	background-size: cover;
+}
+
+
+.footer{
+	height: 30vh;
+	width: 100%;
+	background-color: black;
+	margin: 100vh 0px 0px 0px;
+	display: block;
+	padding-top: 5vh;
+}
+.to_header{
+	width: 100%;
 	display: flex;
-	float:  left;
-	font-family: 'Salsa', cursive;
+	align-content: center;
+	align-items: flex-start;
+	justify-content: center;
+}
+.way_to_header{
+	font-size: 25px; 
+	margin-top: 4px;
+	margin-left: 10px;
+	color: white;
+	background-color: transparent;
+	display: flex;
+	width: 40px;
+	height: 40px;
 	justify-content: center;
 	align-items: center;
-	font-size: 50px;
-	background-color: white;
-}
-.block_subject:nth-child(even){
-	background-color:  #0B2349;
+	align-self: center;
 }
