--- a/style_page.css
+++ b/style_page.css
@@ -76,7 +76,12 @@ body{
 	float: right;
 	margin-right: 20vh;
 }
-.search_in_page form input{
+.search_in_page form input:first-child{
+	border: none;
+    border-bottom: 1px solid black;
+    width: 50px;
+}
+.search_in_page form input:nth-child(2){
 	border: none;
     border-bottom: 1px solid black;
     width: 200px;
@@ -86,13 +91,17 @@ body{
     background-color: white;
     width: 50px;
 }
+input, button{outline:none;}
 
 
-
-
+.wrapper{
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
 .card{
-	width: 26%;
-	height: 30vh;
+	width: 20%;
+	height: 20vh;
 	margin: 3%;
 	border: 3px solid lightblue;
 	border-radius: 30px 30px 0 0;
@@ -102,14 +111,13 @@ body{
 	float: left;
 }
 .name_card{
-	border: 1px solid lightblue;
+	border-bottom: 1px solid lightblue;
 	border-radius: 30px 30px 0 0;
 /*	width: 100.5%;
 	height: 20%;
 	margin: -0.5% 0 0 -0.5%;*/
 /*	width: 70.3vh;*/
 	height: 8vh;
-	margin: -0.2vh -0.2vh 0 -0.2vh;
 	border-collapse: collapse;
 	display: flex;
 	justify-content: center;
@@ -117,5 +125,19 @@ body{
 }
 .text_name_card{
 	margin: 4vh;
+	font-size: 2.7vh;
+	color: #0B2349;
+	font-weight: 1000;
+}
+.content{
+	margin: 1vh;
+	display: flex;
+	flex-direction: column;
+	
+}
+.time_for_test{
 
+}
+.label_error{
+/*Текст, когда не найдено ни одного результата, который бы удовлетворял фильтры*/
 }
