--- a/css/style_dez.css
+++ b/css/style_dez.css
@@ -116,3 +116,30 @@ a{
     text-shadow: 0px 0px 2px black, 0px 0px 4px black, 1px 1px 3px black;
     padding-bottom: 20px;
 }
+
+
+
+
+.garantiya_title{
+    margin-left: 20px;
+    margin: auto;
+    min-width: 20px;
+    display: flex;
+    text-transform: uppercase;
+    font-size: 26px;
+    font-weight: 600;
+}
+.circle{
+    margin-right: 10px;
+    float: left;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+.circle p{
+    position: absolute;
+    top: 2px;
+    left: 8px;
+}
