--- a/css/style_dez.css
+++ b/css/style_dez.css
@@ -2,6 +2,20 @@
     box-sizing: border-box;
     outline: none;
 }
+::-webkit-scrollbar {
+    width: 13px;
+    background-color: white;
+}
+  
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: linear-gradient(to bottom, #d4ad00 0%, #ff0000 350%);
+}
+  
+::-webkit-scrollbar-track {
+   border-radius: 10px;
+    background-color: white;
+}
 a{    
     text-decoration: none;
 }
@@ -111,6 +125,9 @@ a{
 .container_of_the_form {
     padding-top: 30px;
 }
+.container_of_the_form__input{
+    box-shadow: 1px 1px 3px rgb(185, 99, 0), 2px 3px 7px rgb(185, 99, 0), 2px 2px 5px rgb(185, 99, 0);
+}
 .container_of_the_form h4{
     color: rgb(255, 255, 255);
     text-shadow: 0px 0px 2px black, 0px 0px 4px black, 1px 1px 3px black;
@@ -119,7 +136,10 @@ a{
 
 
 
-
+.garantiya_block{
+    padding-left: 30px;
+    padding-right: 30px;
+}
 .garantiya_title{
     margin-left: 20px;
     margin: auto;
@@ -128,6 +148,17 @@ a{
     text-transform: uppercase;
     font-size: 26px;
     font-weight: 600;
+}
+@media screen and (max-width: 1200px){
+    .garantiya_title{
+        font-size: 22px;
+    }
+}
+.garantiya_content{
+    margin-bottom: 0;
+}
+.title{
+    margin-top: 50px;
 }
 .circle{
     margin-right: 10px;
@@ -142,4 +173,33 @@ a{
     position: absolute;
     top: 2px;
     left: 8px;
+}
+.container_time{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.garantiya_time_block{
+    margin-top: 50px;
+    padding-left: 30px;
+    padding-right: 30px;    
+}
+.garantiya_time_fon{
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom right, #d4ad00 -40%, #ff0000 550%);
+    border: none;
+    border-radius: 0 10px;
+}
+.garantiya_time_title{
+    padding-top: 25px;
+    font-weight: 600;
+    color: white;
+    text-shadow: 1px 1px 5px black, -1px -1px 5px black;
+    font-size: 25px;
+}
+.garantiya_time_content{
+    color: white;
+    text-shadow: 1px 1px 5px black, -1px -1px 2px black;
 }
