--- a/css/style_dez.css
+++ b/css/style_dez.css
@@ -1,6 +1,14 @@
 *{
     box-sizing: border-box;
     outline: none;
+    list-style: none;
+}
+.hr{
+    height: 1px;
+    background-color: lightgrey;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 ::-webkit-scrollbar {
     width: 13px;
@@ -202,4 +210,98 @@ a{
 .garantiya_time_content{
     color: white;
     text-shadow: 1px 1px 5px black, -1px -1px 2px black;
+}
+
+
+.pryamougol{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+    height: 0;
+    width: 0;
+}
+
+.document_row{
+    justify-content: center;
+}
+.document_block__title{
+    text-transform: uppercase;
+    font-size: 28px;
+    margin: 0 auto;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.title_shadow{
+    text-shadow: 0px 0px 3px white, 1px 1px 2px black;
+}
+
+/* ИСПРАВИТЬ НАДО */
+.title_shadow:hover{
+    text-shadow: 0px 0px 3px #d4ad00, 1px 1px 3px #d46600d3;
+}
+.container_of_the_form_button{
+    box-shadow: 1px 1px 2px black;
+}
+
+.document_card{
+    margin: auto;
+    margin-top: 30px;
+    justify-content: center;
+}
+.document_card_block{
+    width: 260px;
+    margin: 10px;
+    align-items: center;
+}
+.document_card__img{
+    margin: auto
+}
+.document_card_title{
+    font-weight: 600;
+    font-size: 16px;
+}
+.document_card_content{
+    height: 120px;
+}
+.document_card__blockimg{
+    margin: auto;
+}
+.own-create-btn{
+    margin-bottom: 50px;
+}
+.own-create-btn:hover{
+    background: linear-gradient(to bottom right, #d4ad00 0%, #ff0000 150%);
+    text-shadow: 0px 0px 2px black, 0px 0px 4px black, 1px 1px 3px black;
+    transition: text-shadow .3s;
+}
+
+
+
+.footer_block{
+    justify-content: center;
+    margin: 0 200px;
+    width: 870px;
+}
+.footer{
+    padding: 0;
+    margin-right: 0;
+    margin-left: 0;
+}
+.footer ul{
+    padding: 0;
+    margin: 0;
+}
+.footer ul li{
+    line-height: 16px;
+}
+.footer_title{
+    font-size: 18px;
+}
+.footer_content{
+    color: rgb(107, 107, 107);
+    font-size: 12px;
+    line-height: 13px;
+}
+.footer_content_number{
+    padding-left: 15px;
 }
