--- a/css/style_dez.css
+++ b/css/style_dez.css
@@ -1,44 +1,3 @@
-*{
-    box-sizing: border-box;
-    outline: none;
-    list-style: none;
-}
-.hr{
-    height: 1px;
-    background-color: lightgrey;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-::-webkit-scrollbar {
-    width: 13px;
-    background-color: white;
-}
-  
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background: linear-gradient(to bottom, #d4ad00 0%, #ff0000 350%);
-}
-  
-::-webkit-scrollbar-track {
-   border-radius: 10px;
-    background-color: white;
-}
-a{    
-    text-decoration: none;
-}
-.navbar-collapse-without-width100{
-    width: auto;
-}
-.nav-link-text{
-    text-transform: uppercase;
-    font-size: 16px;
-    transition: color .5s;
-}
-.nav-link-text:hover{
-    text-shadow: 0px 0px 0.9px rgb(212, 173, 0);
-    transition: .5s;
-}
 .content-on-main-page{
     padding-top: 20px;
 }
@@ -63,8 +22,6 @@ a{
     margin: 0 20%;
     margin-bottom: 20px;
 }
-
-
 .one_card__infa{
     margin: auto;
     width: 210px;
@@ -124,17 +81,11 @@ a{
     transition: .5s;
 }
 
-
-
-.carousel-item div h5, .carousel-item div p{
-    text-shadow: 1px 1px 4px #24292e, 0px 0px 4px #24292e, 0px 1px 2px #24292e;
-}
-
 .container_of_the_form {
     padding-top: 30px;
 }
 .container_of_the_form__input{
-    box-shadow: 1px 1px 3px rgb(185, 99, 0), 2px 3px 7px rgb(185, 99, 0), 2px 2px 5px rgb(185, 99, 0);
+    box-shadow: 1px 1px 3px rgb(255, 109, 0), 2px 3px 7px rgb(255, 109, 0), 2px 2px 5px rgb(185, 99, 0);
 }
 .container_of_the_form h4{
     color: rgb(255, 255, 255);
@@ -199,7 +150,7 @@ a{
     text-align: center;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom right, #d4ad00 -40%, #ff0000 550%);
+    background: linear-gradient(to bottom right, rgb(255, 109, 0) 0%, #ff0000 450%);
     border: none;
     border-radius: 0 10px;
 }
@@ -240,7 +191,7 @@ a{
 
 /* ИСПРАВИТЬ НАДО */
 .title_shadow:hover{
-    text-shadow: 0px 0px 3px #d4ad00, 1px 1px 3px #d46600d3;
+    text-shadow: 0px 0px 3px rgb(255, 109, 0), 1px 1px 3px #d46600d3;
 }
 .container_of_the_form_button{
     box-shadow: 1px 1px 2px black;
@@ -263,9 +214,6 @@ a{
     font-weight: 600;
     font-size: 16px;
 }
-.document_card_content{
-    height: 120px;
-}
 .document_card__blockimg{
     margin: auto;
 }
@@ -273,42 +221,7 @@ a{
     margin-bottom: 50px;
 }
 .own-create-btn:hover{
-    background: linear-gradient(to bottom right, #d4ad00 0%, #ff0000 150%);
+    background: linear-gradient(to bottom right, rgb(255, 109, 0) 0%, #ff0000 150%);
     text-shadow: 0px 0px 2px black, 0px 0px 4px black, 1px 1px 3px black;
     transition: text-shadow .3s;
-}
-
-
-
-.footer_block{
-    margin: auto;
-    width: 870px;
-}
-.footer{
-    margin-bottom: 40px;
-    padding: 0;
-    margin-right: 0;
-    margin-left: 0;
-}
-.footer_stat{
-    margin: 0 auto;
-    margin-bottom: 40px;
-}
-.footer ul{
-    padding: 0;
-    margin: 0;
-}
-.footer ul li{
-    line-height: 16px;
-}
-.footer_title{
-    font-size: 18px;
-}
-.footer_content{
-    color: rgb(107, 107, 107);
-    font-size: 12px;
-    line-height: 13px;
-}
-.footer_content_number{
-    padding-left: 15px;
-}
+}  
