--- a/css/style_start.css
+++ b/css/style_start.css
@@ -47,6 +47,7 @@ a{
     color: rgb(207, 207, 207);
     line-height: 30px;
     margin-right: 10px;
+    font-size: 20px;
 }
 .top_menu_link{
     color: rgb(207, 207, 207);
