--- a/css/style_start.css
+++ b/css/style_start.css
@@ -28,7 +28,7 @@ a{
     background-color: white;
 }
 .top_black_menu{
-    background-color: rgb(97, 97, 97);
+    background-color: black;
 }
 .top_black_block{
     padding: 7px 0;
