--- a/css/style_header.css
+++ b/css/style_header.css
@@ -92,3 +92,7 @@
 .dropdown-content a:hover, .dropdown-content2 a:hover, .dropdown-content3 a:hover, .dropdown-content4 a:hover, .dropdown-content5 a:hover {background-color: #ddd;}
 
 .dropdown:hover .dropdown-content, .dropdown2:hover .dropdown-content2, .dropdown3:hover .dropdown-content3, .dropdown4:hover .dropdown-content4, .dropdown5:hover .dropdown-content5 {display: block;}
+.rasp{
+    display: flex;
+    justify-content: space-evenly;
+}
