--- a/worldMap/stylesheet.css
+++ b/worldMap/stylesheet.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body.popup_active {
+    overflow: hidden;
+    height: 100vh;
+    padding-right: 20px;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -25,7 +31,7 @@ header {
     stroke-width: 3px;
     cursor: pointer;
     pointer-events: all;
-    transition: all 0.2s ease;
+    transition: all 0.5s ease;
 }
 
 .country.hover {
@@ -75,4 +81,79 @@ header {
 .world_map svg {
     position: relative;
     z-index: 3;
+}
+
+.popup-main {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    overflow: hidden;
+    position: fixed;
+    top: 0px;
+    z-index: 9999;
+    display: none;
+}
+.popup-container {
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 800px;
+    margin: 50px 0;
+    width: 100%;
+    border-radius: 6px;
+}
+.popup__top_line {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.popup__content {
+    padding: 20px 40px;
+    display: grid;
+    overflow-y: auto;
+    max-height: 70vh;
+    grid-template-columns: 3fr 2fr;
+}
+.popup__left_column {
+    height: 500px;
+    background-color: rgba(255, 255, 0, 0.479);
+}
+.popup__right_column {
+    height: 500px;
+    background-color: rgba(0, 0, 255, 0.466);
+}
+.popup__footer {
+    height: 50px;
+}
+.popup__close-icon {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    cursor: pointer;
+}
+.popup__close-icon::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    height: 1.5px;
+    border-radius: 10px;
+    width: 18px;
+    background-color: #000;
+    transform: rotate(-45deg);
+}
+.popup__close-icon::before {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    height: 1.5px;
+    border-radius: 10px;
+    width: 18px;
+    background-color: #000;
+    transform: rotate(45deg);
 }
